# citral-pipeline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
app/: config.py  main.py
app/api/routes/: audit.py  health.py  sop.py
app/pipeline/: auditor.py  conclusion.py  extractor.py  indexer.py  orchestrator.py  reporter.py
proto/: pipeline.proto
